<resources>
    <string name="app_name">Orphan Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">test@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="donate_button">Donate Button</string>
    <string name="mission_title">Our Mission</string>
    <string name="missionDescription">As a result of the ongoing genocide, over 100,000 Southern Cameroonian refugees have fled the violence to Nigeria. More than 176 villages have been completely burnt to the ground by the genocidal soldiers of Paul Biya. More than half a million people are internally displaced, with millions more living in bushes. Over 10,000 innocent people have been slaughtered by the government soldiers of Paul Biya. .
        In the midst of these killings, thousands of children have become orphans with no parents to take care of them. Some are in the custody of distant relatives, some in orphanages in Southern Cameroons, and others in refugee camps in Nigeria. As Southern Cameroonians in the diaspora, we are looking for ways to bring help to these vulnerable children. The first step to help them is to raise awareness of their plight to the world.</string>
    <string name="whyOrphanConnectTitle">Why Orphan Connect?</string>
    <string name="whyOrphanConnectDescription">This project is very important because it provides an opportunity for the world to know about them, and hopefully, serve as a conduit for help from well wishers across the world interested in sponsoring these children in school, provide food, clothing or any kind of help . We are particularly appreciative to Team SCORE and Georgia Tech for accepting to assist provide a means for these children\'s story to be told to the world.</string>
    <string name="title_activity_button_nav">Button_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="my_donation">My Donation</string>
    <string name="map">Map</string>
    <string name="title_activity_my__donation">My_Donation</string>
    <string name="pop_text">You are making recurring donation $  </string>

    <!-- Strings related to login and signUp-->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_return_sign_in">Return to Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="Sent_Vertification">Sent Vertification</string>
    <string name="resend_vertification">resend vertification</string>
    <string name="sign_up">Sign Up</string>

    <!-- Strings related to Database-->
    <string name="hint_word">Orphan...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Data not saved because it is empty.</string>
    <string name="merchantID">b2rnychf57r462kj</string>
</resources>
