<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/textBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_SU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_vertification"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="300dp"
        android:text="@string/Sent_Vertification"
        android:textSize="16sp"
        android:onClick="sentVertificationDialog"
        android:clickable="true"


        />


    <TextView
        android:id="@+id/return_to_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:text="@string/action_return_sign_in"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="return_to_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/resend_vertification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/send_vertification"

        />

    <TextView
        android:id="@+id/resend_vertification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:text="@string/resend_vertification"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="resentVertificationDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/return_to_sign_in"
        app:layout_constraintTop_toBottomOf="@id/send_vertification"

        />

    <TextView
        android:id="@+id/forget_password_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:onClick="signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/return_to_sign_in"
        android:textAlignment="center" />
</androidx.constraintlayout.widget.ConstraintLayout>